Fix RWD error on iPhone 5s,se

--- a/beta/assets/css/main.css
+++ b/beta/assets/css/main.css
@@ -268,7 +268,6 @@ body {
     background-color: #ffd548; }
 
 #footer {
-  max-height: 10em;
   position: relative;
   color: white;
   background-color: #1d1d1d;
