--- a/beta/assets/scss/footer.scss
+++ b/beta/assets/scss/footer.scss
@@ -1,6 +1,5 @@
 @import "util";
 #footer {
-  max-height: 10em;
   position: relative;
   color: $white;
   background-color: $gray;
