--- a/beta/tw/assets/scss/traffic.scss
+++ b/beta/tw/assets/scss/traffic.scss
@@ -119,3 +119,8 @@
     }
   }
 }
+@media screen and (max-width: 320px) {
+  #traffic {
+    height: 250vh;
+  }
+}
